Reset button + fixing gap
fix the gap plz

--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 .controls {
     display: flex; flex-direction: row; align-items: center; justify-content: center;
+        position: sticky;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        text-align: center;
+        padding: 10px;
 }
 
 button { 
@@ -13,4 +19,13 @@ button {
     cursor: pointer;
     border-radius: 50%;
     font-size:x-large;
+}
+
+input {
+    padding: 10px;
+
+    margin-right: -10px;
+    border-color: black;
+    outline: none;
+    box-shadow: none;
 }
